# aoc

./: README.md
aoc2023/: Cargo.toml  README.md
aoc2023/day01p1/data/: get.sh
aoc2023/day01p1/src/: main.rs
aoc2023/day01p2/: .gitignore
aoc2023/day01p2/src/: main.rs
aoc2023/day02p1/: .gitignore
aoc2023/day02p1/src/: main.rs
aoc2023/day02p2/src/: main.rs
aoc2023/day03p1/src/: main.rs
aoc2023/day1p1/: .gitignore
aoc2023/day1p1/src/: main.rs
aoc2023/day1p2/data/: get.sh
aoc2023/day1p2/src/: main.rs
aoc2023/src/: main.rs
aoc2023/src/day01/: sol1.rs  sol2.rs
aoc2023/src/day02/: mod.rs  sol1.rs  sol2.rs
aoc2024/: .gitignore  Cargo.toml
aoc2024/src/: main.rs
aoc2024/src/day01/: mod.rs  sol1.rs  sol2.rs
aoc2024/src/day02/: sol1.rs  sol2.rs
